[gd_scene load_steps=69 format=3 uid="uid://5a0ogwfcgsdm"]

[ext_resource type="Script" uid="uid://bktgo6hutw2jh" path="res://1.1 Player Solo/player_solo.gd" id="1_58twp"]
[ext_resource type="Script" uid="uid://bg6to2usmqm5q" path="res://4 Resources/States/StateMachine.gd" id="2_8bjvv"]
[ext_resource type="Script" uid="uid://dnllwahr86mr1" path="res://1.1 Player Solo/States/PlayerSoloIdleState.gd" id="3_58twp"]
[ext_resource type="PackedScene" uid="uid://c3kxaawd6n5dl" path="res://1.1 Player Solo/Components/listener_comp.tscn" id="4_2ykw7"]
[ext_resource type="Script" uid="uid://clkn4aux8l2at" path="res://1.1 Player Solo/States/PlayerSoloWalkState.gd" id="4_wx654"]
[ext_resource type="Script" uid="uid://bv54vufv7st8y" path="res://1.1 Player Solo/States/PlayerSoloRunState.gd" id="5_soogo"]
[ext_resource type="Script" uid="uid://dp22q6gluiin4" path="res://1.1 Player Solo/States/PlayerSoloShootState.gd" id="6_asdkn"]
[ext_resource type="PackedScene" uid="uid://c4juwh1tsimcx" path="res://1 Player/Weapons/malice_type_m.tscn" id="7_6j5l7"]
[ext_resource type="Shader" uid="uid://dew15oesvk6o6" path="res://4 Resources/Shaders/cut_sphere.gdshader" id="8_x5fbq"]
[ext_resource type="Texture2D" uid="uid://pao6524wf303" path="res://addons/kenney_particle_pack/smoke_08.png" id="9_x7b2d"]
[ext_resource type="Texture2D" uid="uid://68kjn6suxq5a" path="res://addons/kenney_particle_pack/smoke_04.png" id="10_elq4v"]
[ext_resource type="WwiseEvent" uid="uid://bhq7qwjnhvura" path="res://Wwise/resources/Event/{5703BB24-BD9C-48BE-902D-F00553BB8BBB}.tres" id="11_ki3dk"]
[ext_resource type="WwiseEvent" uid="uid://pixq1cigj6qc" path="res://Wwise/resources/Event/{90163899-6434-4758-83D0-BF16752D4064}.tres" id="12_0ey2m"]
[ext_resource type="Script" uid="uid://dnv20d0i33ihh" path="res://1.1 Player Solo/GUI/hud.gd" id="12_58twp"]
[ext_resource type="Script" uid="uid://dfuccpahgcfqr" path="res://1.1 Player Solo/GUI/skill.gd" id="13_8bjvv"]
[ext_resource type="PackedScene" uid="uid://c0wl72hwaa31r" path="res://1 Player/GUI/hud.tscn" id="13_h1auf"]
[ext_resource type="PackedScene" uid="uid://ser6du4tr2cu" path="res://1 Player/GUI/pause.tscn" id="14_626s5"]
[ext_resource type="Script" uid="uid://vut507w0n3kq" path="res://1.1 Player Solo/GUI/fps.gd" id="14_wx654"]
[ext_resource type="Script" uid="uid://x84v620dish7" path="res://1.1 Player Solo/GUI/pause.gd" id="16_soogo"]
[ext_resource type="Script" uid="uid://cev1nojgpax86" path="res://1.1 Player Solo/Components/audio_component.gd" id="17_asdkn"]
[ext_resource type="Script" uid="uid://dyo77to88m58b" path="res://1.1 Player Solo/Components/health_component.gd" id="18_dv1je"]
[ext_resource type="Script" uid="uid://baxo6thy668s4" path="res://1.1 Player Solo/Components/bullet_proj_comp.gd" id="19_6j5l7"]
[ext_resource type="PackedScene" uid="uid://dqi15shj2p0rk" path="res://1.1 Player Solo/GUI/Inventory/Inventory.tscn" id="20_wx654"]
[ext_resource type="Script" uid="uid://ch2csxxnpm2ou" path="res://1.1 Player Solo/Components/skill_1_comp.gd" id="20_x5fbq"]
[ext_resource type="WwiseEvent" uid="uid://bd3fbawv0fm0b" path="res://Wwise/resources/Event/{BF8C47E3-7FB7-4A96-9087-30E26825A77B}.tres" id="23_aeqeu"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_736cw"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ulbgw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7n4gc"]
render_priority = 0
shader = ExtResource("8_x5fbq")
shader_parameter/enabled = false
shader_parameter/spherePos = Vector3(0, 0, 0)
shader_parameter/borderColor = Color(0.810186, 0, 0.150926, 1)
shader_parameter/borderSize = 0.0
shader_parameter/sphereRadius = 0.0
shader_parameter/noiseSpeed = 0.0
shader_parameter/noiseStrength = 0.0
shader_parameter/noiseSize = 0.0
shader_parameter/invertCut = false

[sub_resource type="Gradient" id="Gradient_hotdi"]
offsets = PackedFloat32Array(0, 0.236364, 1)
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_hk4rl"]
gradient = SubResource("Gradient_hotdi")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_yeulb"]
lifetime_randomness = 0.13
initial_velocity_max = 17.24
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("GradientTexture1D_hk4rl")
turbulence_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_16m3v"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("9_x7b2d")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="PlaneMesh" id="PlaneMesh_h67n3"]
material = SubResource("StandardMaterial3D_16m3v")
size = Vector2(0.5, 0.5)
orientation = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cs3jb"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("10_elq4v")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="PlaneMesh" id="PlaneMesh_sl2x1"]
material = SubResource("StandardMaterial3D_cs3jb")
size = Vector2(0.5, 0.5)
orientation = 2

[sub_resource type="BoxShape3D" id="BoxShape3D_ulbgw"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_1ggn5"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_42o4i"]
xfade_time = 0.05
input_0/name = "True"
input_0/auto_advance = true
input_0/break_loop_at_end = false
input_0/reset = true
input_1/name = "False"
input_1/auto_advance = false
input_1/break_loop_at_end = false
input_1/reset = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_oxg2c"]
animation = &"Gun_empty"

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_3y35m"]
input_0/name = "Trauma"
input_0/auto_advance = false
input_0/break_loop_at_end = false
input_0/reset = false
input_1/name = "Malice"
input_1/auto_advance = false
input_1/break_loop_at_end = false
input_1/reset = false
input_2/name = "Salvation"
input_2/auto_advance = false
input_2/break_loop_at_end = false
input_2/reset = false

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_gflx4"]
input_0/name = "Idle"
input_0/auto_advance = false
input_0/break_loop_at_end = false
input_0/reset = true
input_1/name = "Move"
input_1/auto_advance = false
input_1/break_loop_at_end = false
input_1/reset = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_52w8c"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tl38f"]
animation = &"malice_equip"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ie8ji"]
animation = &"move"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sxkt1"]
animation = &"Salvation_equip"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3ay3x"]
animation = &"shoot"

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_yqtjs"]
xfade_time = 0.05
input_0/name = "True"
input_0/auto_advance = true
input_0/break_loop_at_end = false
input_0/reset = true
input_1/name = "False"
input_1/auto_advance = false
input_1/break_loop_at_end = false
input_1/reset = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gq8kr"]
animation = &"Trauma_equip"

[sub_resource type="AnimationNodeAdd2" id="AnimationNodeAdd2_qqfpc"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_ld7nr"]
graph_offset = Vector2(-621.939, 39.7088)
nodes/DryFire/node = SubResource("AnimationNodeTransition_42o4i")
nodes/DryFire/position = Vector2(500, 80)
nodes/EmptyShoot/node = SubResource("AnimationNodeAnimation_oxg2c")
nodes/EmptyShoot/position = Vector2(260, -40)
nodes/Equip/node = SubResource("AnimationNodeTransition_3y35m")
nodes/Equip/position = Vector2(-300, 440)
nodes/FallAndFloor/node = SubResource("AnimationNodeTransition_gflx4")
nodes/FallAndFloor/position = Vector2(-160, 200)
nodes/Idle/node = SubResource("AnimationNodeAnimation_52w8c")
nodes/Idle/position = Vector2(-380, 100)
"nodes/Malice equip/node" = SubResource("AnimationNodeAnimation_tl38f")
"nodes/Malice equip/position" = Vector2(-740, 620)
nodes/Move/node = SubResource("AnimationNodeAnimation_ie8ji")
nodes/Move/position = Vector2(-380, 240)
"nodes/Salvation equip/node" = SubResource("AnimationNodeAnimation_sxkt1")
"nodes/Salvation equip/position" = Vector2(-740, 780)
nodes/Shoot/node = SubResource("AnimationNodeAnimation_3ay3x")
nodes/Shoot/position = Vector2(-380, -60)
nodes/Shooting/node = SubResource("AnimationNodeTransition_yqtjs")
nodes/Shooting/position = Vector2(260, 120)
"nodes/Trauma equip/node" = SubResource("AnimationNodeAnimation_gq8kr")
"nodes/Trauma equip/position" = Vector2(-740, 460)
nodes/gunEquip/node = SubResource("AnimationNodeAdd2_qqfpc")
nodes/gunEquip/position = Vector2(40, 300)
nodes/output/position = Vector2(700, 120)
node_connections = [&"DryFire", 0, &"EmptyShoot", &"DryFire", 1, &"Shooting", &"Equip", 0, &"Trauma equip", &"Equip", 1, &"Malice equip", &"Equip", 2, &"Salvation equip", &"FallAndFloor", 0, &"Idle", &"FallAndFloor", 1, &"Move", &"Shooting", 0, &"Shoot", &"Shooting", 1, &"gunEquip", &"gunEquip", 0, &"FallAndFloor", &"gunEquip", 1, &"Equip", &"output", 0, &"DryFire"]

[sub_resource type="Animation" id="Animation_grxd7"]
resource_name = "Gun_empty"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Camera3D/Hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Camera3D/Hand:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.366667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.158319), Vector3(0, 0, -0.282126), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_rukxb"]
resource_name = "Put_away"

[sub_resource type="Animation" id="Animation_6woqc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Camera3D/Hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.00823993, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Camera3D/Hand:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.000377573, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head/Camera3D/Hand/Malice_typeM:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.38927, -0.434237, 0.130601)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Head/Camera3D/Hand/Malice_typeM:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5708, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Head/Camera3D/Hand/Malice_typeM:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_gjl0r"]
resource_name = "Reloading"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Camera3D/Hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Camera3D/Hand:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.08, 0.14, 0.24, 0.28, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.448166), Vector3(0, 0, -0.257995), Vector3(0, 0, -0.711675), Vector3(0, 0, -0.393799), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_auwjt"]
resource_name = "Salvation_equip"
length = 0.5
step = 0.01

[sub_resource type="Animation" id="Animation_llvb0"]
resource_name = "Salvation_unequip"
length = 0.5
step = 0.1

[sub_resource type="Animation" id="Animation_hsecg"]
resource_name = "Take_out"

[sub_resource type="Animation" id="Animation_ct8el"]
resource_name = "Trauma_equip"
length = 0.5
step = 0.01

[sub_resource type="Animation" id="Animation_7h1qu"]
resource_name = "Trauma_unequip"
length = 0.5
step = 0.01

[sub_resource type="Animation" id="Animation_qkman"]
resource_name = "death"
length = 2.0

[sub_resource type="Animation" id="Animation_qw2dm"]
resource_name = "idle"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Camera3D/Hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.0240259, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Camera3D/Hand:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.118368, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_scqn5"]
resource_name = "malice_equip"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Camera3D/Hand/Malice_typeM:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.38927, -0.434237, 0.130601), Vector3(0.38927, -0.434237, 0.130601)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Camera3D/Hand/Malice_typeM:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.037904, 1.88469, -0.588862), Vector3(0, 1.5708, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head/Camera3D/Hand/Malice_typeM:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_3lvqf"]
resource_name = "malice_unequip"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Camera3D/Hand/Malice_typeM:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.38927, -0.434237, 0.130601), Vector3(0.38927, -0.434237, 0.130601)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Camera3D/Hand/Malice_typeM:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5708, 0), Vector3(0.037904, 1.88469, -0.588862)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head/Camera3D/Hand/Malice_typeM:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_0ng04"]
resource_name = "move"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Camera3D/Hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.130926, 0), Vector3(0, 0, 0), Vector3(0, 0.0523593, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Camera3D/Hand:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.134931, 0, 0), Vector3(0, 0, 0), Vector3(0.0621337, 0, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Audio_Component")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_footstep"
}, {
"args": [],
"method": &"_footstep"
}]
}

[sub_resource type="Animation" id="Animation_qeuk3"]
resource_name = "no_gun"
step = 0.01

[sub_resource type="Animation" id="Animation_5v340"]
resource_name = "shoot"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Camera3D/Hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.189889), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head/Camera3D/Hand:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.0742289, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_demr1"]
_data = {
&"Gun_empty": SubResource("Animation_grxd7"),
&"Put_away": SubResource("Animation_rukxb"),
&"RESET": SubResource("Animation_6woqc"),
&"Reloading": SubResource("Animation_gjl0r"),
&"Salvation_equip": SubResource("Animation_auwjt"),
&"Salvation_unequip": SubResource("Animation_llvb0"),
&"Take_out": SubResource("Animation_hsecg"),
&"Trauma_equip": SubResource("Animation_ct8el"),
&"Trauma_unequip": SubResource("Animation_7h1qu"),
&"death": SubResource("Animation_qkman"),
&"idle": SubResource("Animation_qw2dm"),
&"malice_equip": SubResource("Animation_scqn5"),
&"malice_unequip": SubResource("Animation_3lvqf"),
&"move": SubResource("Animation_0ng04"),
&"no_gun": SubResource("Animation_qeuk3"),
&"shoot": SubResource("Animation_5v340")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_pefit"]
properties/0/path = NodePath("Head:rotation")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:position")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("WeaponManger:Current_weapon")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("Audio_Component:Surface")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath("Footsteps:position")
properties/5/spawn = true
properties/5/replication_mode = 1

[node name="Player" type="CharacterBody3D" groups=["Players"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.96046e-08, 0)
collision_layer = 2
script = ExtResource("1_58twp")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
unique_name_in_owner = true
script = ExtResource("2_8bjvv")
initial_state = NodePath("PlayerIdleState")

[node name="PlayerIdleState" type="Node" parent="StateMachine"]
script = ExtResource("3_58twp")

[node name="PlayerWalkState" type="Node" parent="StateMachine"]
script = ExtResource("4_wx654")

[node name="PlayerRunState" type="Node" parent="StateMachine"]
script = ExtResource("5_soogo")

[node name="PlayerShootState" type="Node" parent="StateMachine"]
script = ExtResource("6_asdkn")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_736cw")

[node name="Hurtbox" type="Area3D" parent="." groups=["Players"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 16
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hurtbox"]
shape = SubResource("CapsuleShape3D_ulbgw")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.39031, 0)

[node name="Camera3D" type="Camera3D" parent="Head" groups=["Players"]]

[node name="AkListener3D" parent="Head/Camera3D" instance=ExtResource("4_2ykw7")]

[node name="Hand" type="Node3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, -0.000377573, 0, 0.000377573, 1, 0, 0.00823993, 0)

[node name="Malice_typeM" parent="Head/Camera3D/Hand" instance=ExtResource("7_6j5l7")]
transform = Transform3D(-1.81e-06, 0, 0.5, 0, 0.5, 0, -0.5, 0, -1.81e-06, 0.38927, -0.434237, 0.130601)
visible = false
script = null

[node name="Cube_001" parent="Head/Camera3D/Hand/Malice_typeM" index="0"]
material_override = SubResource("ShaderMaterial_7n4gc")

[node name="MuzzleFlash" type="GPUParticles3D" parent="Head/Camera3D"]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.582622, -0.488644, -1.74872)
emitting = false
amount = 6
lifetime = 0.25
one_shot = true
local_coords = true
process_material = SubResource("ParticleProcessMaterial_yeulb")
draw_passes = 2
draw_pass_1 = SubResource("PlaneMesh_h67n3")
draw_pass_2 = SubResource("PlaneMesh_sl2x1")

[node name="RayCast3D" type="RayCast3D" parent="Head/Camera3D"]
target_position = Vector3(0, 0, -50)
collision_mask = 2

[node name="RaycastEnd" type="Marker3D" parent="Head/Camera3D/RayCast3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -51)

[node name="Marker3D" type="Marker3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.585395, -0.477487, -1.74103)

[node name="Skill1Marker" type="Marker3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.436369, -0.0231869, -0.766952)

[node name="Skillaudio" type="AkEvent3D" parent="Head/Camera3D/Skill1Marker"]
event = ExtResource("11_ki3dk")
unique_name_in_owner = true

[node name="Area3D" type="Area3D" parent="Head/Camera3D/Skill1Marker/Skillaudio"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head/Camera3D/Skill1Marker/Skillaudio/Area3D"]
shape = SubResource("BoxShape3D_ulbgw")

[node name="Voice" type="AkEvent3D" parent="Head/Camera3D"]
event = ExtResource("12_0ey2m")

[node name="Area3D" type="Area3D" parent="Head/Camera3D/Voice"]
collision_layer = 512
collision_mask = 512

[node name="CollisionShape3D" type="CollisionShape3D" parent="Head/Camera3D/Voice/Area3D"]
shape = SubResource("BoxShape3D_1ggn5")

[node name="FeetCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.341633, 0)

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendTree_ld7nr")
anim_player = NodePath("../AnimationPlayer")
parameters/DryFire/current_state = "False"
parameters/DryFire/transition_request = ""
parameters/DryFire/current_index = 1
parameters/Equip/current_state = "Malice"
parameters/Equip/transition_request = ""
parameters/Equip/current_index = 1
parameters/FallAndFloor/current_state = "Idle"
parameters/FallAndFloor/transition_request = ""
parameters/FallAndFloor/current_index = 0
parameters/Shooting/current_state = "False"
parameters/Shooting/transition_request = ""
parameters/Shooting/current_index = 1
parameters/gunEquip/add_amount = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_demr1")
}
playback_default_blend_time = 0.05

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_pefit")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource("13_h1auf")]
visible = false
script = ExtResource("12_58twp")

[node name="Skill" parent="CanvasLayer/HUD" index="0"]
script = ExtResource("13_8bjvv")

[node name="Fps" parent="CanvasLayer/HUD" index="1"]
script = ExtResource("14_wx654")

[node name="Ammo" type="Control" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -40.0
offset_right = -10.0
grow_horizontal = 0
grow_vertical = 0

[node name="Ammo_count" type="Label" parent="CanvasLayer/HUD/Ammo"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 17.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pause" parent="CanvasLayer" instance=ExtResource("14_626s5")]
script = ExtResource("16_soogo")

[node name="Inventory" parent="CanvasLayer" instance=ExtResource("20_wx654")]
visible = false

[node name="Audio_Component" type="Node" parent="."]
script = ExtResource("17_asdkn")

[node name="Health_Component" type="Node" parent="."]
script = ExtResource("18_dv1je")

[node name="BulletProjComp" type="Node" parent="."]
script = ExtResource("19_6j5l7")

[node name="Skill1_Component" type="Node" parent="."]
script = ExtResource("20_x5fbq")

[node name="WeaponManger" type="Node" parent="."]

[node name="Footsteps" type="AkEvent3D" parent="."]
event = ExtResource("23_aeqeu")
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.72969, 0)

[node name="Area3D" type="Area3D" parent="Footsteps"]
collision_layer = 512
collision_mask = 512

[node name="CollisionShape3D" type="CollisionShape3D" parent="Footsteps/Area3D"]
shape = SubResource("BoxShape3D_ulbgw")

[connection signal="animation_finished" from="AnimationTree" to="WeaponManger" method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="WeaponManger" method="_on_animation_player_animation_finished"]

[editable path="Head/Camera3D/Hand/Malice_typeM"]
[editable path="CanvasLayer/HUD"]
